[tool.poetry]
name = "kappa"
version = "0.1.0"
description = ""
authors = ["Karim N. Gorjux <karimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
click = "^8.1.7"
ffmpeg-python = "^0.2.0"
sanitize-filename = "^1.2.0"

[tool.poetry.scripts]
snack = "kappa.snack.convert:snack"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipython = "^8.20.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
